--- a/index.html
+++ b/index.html
@@ -149,5 +149,23 @@
                 <video src="img/formacao-java.mp4" class="institucional__video" controls ></video>
             </section>
     </main>
+    <footer class="rodape__container">
+        <img src="img/logo-apeperia.svg" alt="Logo da Apereria" class="rodape__logo">
+        <ul class="rodape__social">
+            <li><a href="#" class="rodape__midia"><img src="img/facebook.png" alt="Icone do facebook"></a></li>
+            <li><a href="#" class="rodape__midia"><img src="img/twitter.png" alt="Icone do twitter"></a></li>
+            <li><a href="#" class="rodape__midia"><img src="img/instagram.png" alt="Icone do Instagran"></a></li>
+        </ul>
+        <nave>
+            <ul class="rodape__navegacao">
+                <li class="rodape__link"><a href="#">Sobre</a></li>
+                <li class="rodape__link"><a href="#"></a>Planos</li>
+                <li class="rodape__link"><a href="#"></a>Blog</li>
+                <li class="rodape__link"><a href="#"></a>Destaques</li>
+                <li class="rodape__link"><a href="#"></a>Institucional</li>
+                <li class="rodape__link"><a href="#"></a>Contato</li>
+            </ul>
+        </nave>
+    </footer>
 </body>
 </html>
